--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "zynith",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
+  "version": "0.0.3",
   "main": "lib/api/index.js",
   "types": "lib/api/index.d.ts",
   "scripts": {
@@ -14,7 +12,9 @@
     "build-tsc": "tsc && rm -rf ./lib/api/web && rm -rf ./lib/api/main.js",
     "build-vite": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --coverage",
+    "semantic-release": "semantic-release --generate-notes false --debug"
   },
   "repository": {
     "type": "git",
@@ -25,26 +25,26 @@
     "email": "opensource@aerrobert.com",
     "url": "https://github.com/soul-filament"
   },
+  "bugs": {
+    "url": "https://github.com/soul-filament/zynith/issues"
+  },
+  "homepage": "https://github.com/soul-filament/zynith#readme",
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "chart.js": "^4.4.1",
-    "chartjs-adapter-moment": "^1.0.1",
     "colors": "^1.4.0",
-    "flowbite-react": "^0.7.2",
+    "commitizen": "^4.3.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
+    "cz-conventional-changelog": "^3.3.0",
     "http-server": "^14.1.1",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "recoil": "^0.7.7",
+    "husky": "^8.0.3",
     "sqlite3": "^5.1.6",
-    "tailwindcss": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.15.1"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@ryansonshine/commitizen": "^4.2.8",
+    "@ryansonshine/cz-conventional-changelog": "^3.3.4",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -52,10 +52,77 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "flowbite-react": "^0.7.2",
+    "jest": "^29.7.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
+    "recoil": "^0.7.7",
+    "semantic-release": "^21.0.1",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/@ryansonshine/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits",
+          "releaseRules": [
+            {
+              "type": "build",
+              "scope": "deps",
+              "release": "patch"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "build",
+                "section": "Dependencies and Other Build Updates",
+                "hidden": false
+              }
+            ]
+          }
+        }
+      ],
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ]
   }
 }
