--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --coverage",
-    "semantic-release": "semantic-release --generate-notes false --debug"
+    "semantic-release": "npm publish patch"
   },
   "repository": {
     "type": "git",
